# sbn

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.dashboard  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3b9acc8c9e6c_add_spans_table.py  (+5 more)
app/: __init__.py  main.py
dashboard/: app.py
examples/: live_agent_cli.py  pr_agent.py  sample.diff  sample_llm_client.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
requirements/: backend.txt
sdk/: README.md  pyproject.toml
sdk/sbn_sdk/: __init__.py  client.py  governance.py  interceptor.py  models.py  tracer.py
sdk/sbn_sdk/integrations/: __init__.py  autogen.py  base.py  crewai.py  dspy.py  google_adk.py  haystack.py  langchain.py  langgraph.py  ocr.py  openai_agents.py
tests/: conftest.py  test_alert_rule_service.py  test_cache.py  test_cost_analytics_service.py  test_e2e_api.py  test_event_stream_service.py  test_governance.py  test_governance_service.py  test_integration.py  test_integrations.py  test_logging_config.py  test_metrics_service.py  test_middleware.py  test_oversight_service.py  test_pii_redaction.py  test_project_service.py  test_realtime_analyzer_service.py  test_realtime_event_publisher.py  test_sdk_models.py  test_security.py  test_span_service.py  test_trace_repository.py  test_trace_service.py  test_webhook.py  test_webhook_delivery.py  test_webhook_service.py
(+93 files in other folders)
